fix header and advanced search on tablets

--- a/src/protected/application/themes/BaseV1/assets/css/sass/application/_advanced-search.scss
+++ b/src/protected/application/themes/BaseV1/assets/css/sass/application/_advanced-search.scss
@@ -66,7 +66,7 @@
     box-sizing: border-box;
     padding: 0 $padding-base $padding-base;
     line-height: 2rem;
-    @media screen and (min-width: $screen-tablet) {
+    @media screen and (min-width: $screen-desktop) {
         float: left;
         width: 20%;
         padding: 0 $padding-base;
@@ -143,7 +143,7 @@
 }
 //** Verified button filter set.
 .verified-filter {
-    @media screen and (min-width: $screen-tablet) {
+    @media screen and (min-width: $screen-desktop) {
         float: right;
         text-align: center;
     }
